--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -94,6 +94,23 @@ line-height: 1.7em;
         }
     }
     }
+    @media (max-width: 800px) {
+        footer {
+            small {
+                display: block;
+                float: none;
+                margin-bottom: 1em;
+                }
+                ul {
+                float: none;
+                padding: 0;
+                li {
+                float: none;
+                margin-left: 0;
+                }
+            }
+        }
+    }
 
 /* miscellaneous */
 .debug_dump {
@@ -160,3 +177,6 @@ input, textarea, select, .uneditable-input {
     color: $state-danger-text;
     }
     }
+
+    
+    
